--- a/src/components/Pokemon/Pokemon.module.scss
+++ b/src/components/Pokemon/Pokemon.module.scss
@@ -1,9 +1,9 @@
 .infoContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  width: 15rem;
-  height: 20rem;
+  justify-content: space-between;
+  height: 12rem;
+  width: 10rem;
   background-color: blue;
   align-self: center;
   margin: 1rem;
@@ -11,23 +11,15 @@
   border-radius: 1rem;
 
   img {
-    width: 10rem;
-    height: 10rem;
+    width: 7rem;
+    height: 7rem;
+    align-self: center;
   }
 
-  .pokemonInfo {
-    display: flex;
-    flex-direction: column;
-
-    h2,
+  .nameContainer {
     h4 {
+      text-align: center;
       margin: 0 auto;
-    }
-
-    h4 {
-      margin-left: 0.5rem;
-      align-self: end;
-      padding-bottom: 0.2rem;
     }
   }
 }
