--- a/src/components/BuyPokemons/BuyPokemons.module.scss
+++ b/src/components/BuyPokemons/BuyPokemons.module.scss
@@ -17,13 +17,19 @@
 
   .fetchButton {
     margin: 0 auto;
-    background-color: red;
-    height: 2.7rem;
-    border-radius: 3rem;
+    padding: 0.8rem;
+    border-radius: 10rem;
+    background-color: #034c8c;
     border: none;
     font-weight: 600;
-    font-size: 2rem;
     cursor: pointer;
     align-self: center;
+    color: #f2cb05;
+  }
+
+  .fetchButton:hover {
+    transition: 0.3s;
+    color: #034c8c;
+    background-color: #f2cb05;
   }
 }
