--- a/src/components/Authentication/Login.module.scss
+++ b/src/components/Authentication/Login.module.scss
@@ -1,6 +1,8 @@
 .formContainer {
+  position: absolute;
+  top: 29%;
+  left: 38%;
   border-radius: 1rem;
-  background-color: red;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,14 +24,20 @@ form {
 .passwordContainer {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.6rem;
+
+  label {
+    align-self: center;
+  }
 }
 
 .emailContainer input,
 .passwordContainer input {
-  height: 2rem;
-  border-radius: 1rem;
+  height: 1rem;
   border: none;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px dashed black;
 }
 
 textarea:focus,
@@ -39,7 +47,6 @@ input:focus {
 
 .buttonsContainer {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   gap: 1rem;
+  align-self: center;
 }
