--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,7 +1,10 @@
 .button {
+  background-color: transparent;
+  border: solid 2px black;
   width: 7rem;
   height: 2rem;
-  border-radius: 0.8rem;
   margin: 0 auto;
-  border: none;
+}
+.button:hover {
+  background-color: #9dbd7f;
 }
