Fixed styles on create pokemon page

--- a/src/components/CreatePokemon/CreatePokemon.module.scss
+++ b/src/components/CreatePokemon/CreatePokemon.module.scss
@@ -4,7 +4,7 @@
   gap: 2rem;
   margin: 0 auto;
   width: 60rem;
-  min-height: 55rem;
+  height: 100%;
   background-color: rgb(223, 223, 228);
 }
 
