--- a/src/components/AddPokemon/AddPokemon.module.scss
+++ b/src/components/AddPokemon/AddPokemon.module.scss
@@ -1,48 +1,62 @@
 .addPokemonForm {
   margin: 0 auto;
-  background-color: red;
   width: 50rem;
   height: 20rem;
-  border-radius: 2rem;
   border: none;
   display: flex;
   justify-content: center;
-  gap: 1.2rem;
-}
+  gap: 1.5rem;
 
-.infoContainer {
-  display: flex;
-  margin: 0 auto;
-  height: 2rem;
-}
+  .infoContainer {
+    display: flex;
+    justify-content: center;
 
-.newPokemonLabel {
-  width: 8rem;
-  font-weight: 600;
-  margin-right: 1rem;
-  align-self: center;
-}
+    .newPokemonLabel {
+      width: 8rem;
+      font-weight: 600;
+      align-self: center;
+    }
+    .newPokemonInput {
+      width: 20rem;
+      appearance: unset;
+      background-color: transparent;
+      border: none;
+      border-bottom: 2px groove black;
+      padding-bottom: 0.2rem;
+    }
 
-.newPokemonInput,
-select {
-  border: none;
-  border-radius: 1rem;
-  height: 2.5rem;
-  width: 27rem;
-  appearance: unset;
-  background-color: rgb(238, 234, 234);
-  padding-left: 1rem;
-}
+    .newPokemonInput:focus {
+      outline: none;
+    }
+  }
 
-.newPokemonInput {
-  width: 26rem;
-}
+  .infoContainerGroup {
+    display: flex;
+    justify-content: center;
 
-.newPokemonInput:focus,
-select:focus {
-  outline: none;
-}
+    .newPokemonLabel {
+      width: 3.9rem;
+      font-weight: 600;
+      margin: 0 1rem;
+      align-self: center;
+      padding-bottom: 0.2rem;
+    }
+    .newPokemonInput,
+    select {
+      width: 9rem;
+      appearance: unset;
+      background-color: transparent;
+      border: none;
+      border-bottom: 2px groove black;
+      padding: 0 0.5rem 0.3rem;
+    }
 
+    .newPokemonInput:focus,
+    select:focus {
+      outline: none;
+    }
+  }
+}
 .submitButton,
 .fetchButton,
 .openButton {
@@ -71,7 +85,6 @@ select:focus {
   border: none;
   cursor: pointer;
 }
-
 .contentContainer {
   display: flex;
   flex-direction: column;
