--- a/src/components/BuyPokemons/BuyPokemons.module.scss
+++ b/src/components/BuyPokemons/BuyPokemons.module.scss
@@ -2,28 +2,34 @@
   display: flex;
   flex-wrap: wrap;
   background-color: white;
+  height: 100vh;
   width: 80rem;
   margin: 0 auto;
 
   .pokemonsContainer {
-    overflow: auto;
+    overflow: hidden;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-    background-color: blueviolet;
     width: 70rem;
-    max-height: 35rem;
+    justify-content: center;
   }
 
   .fetchButton {
     margin: 0 auto;
-    background-color: red;
-    height: 2.7rem;
-    border-radius: 3rem;
+    padding: 0.8rem;
+    border-radius: 10rem;
+    background-color: #034c8c;
     border: none;
     font-weight: 600;
-    font-size: 2rem;
     cursor: pointer;
     align-self: center;
+    color: #f2cb05;
+  }
+
+  .fetchButton:hover {
+    transition: 0.3s;
+    color: #034c8c;
+    background-color: #f2cb05;
   }
 }
