--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,12 +4,16 @@
   padding: 0 2rem;
   display: flex;
   justify-content: space-between;
-  background-color: red;
 }
 
 .titleContainer {
-  display: flex;
-  align-items: center;
+  width: 10rem;
+  height: 3rem;
+
+  img {
+    width: 17rem;
+    height: 7rem;
+  }
 }
 
 h1,
