- Removed justify center from general app - Refactor Header scss - Code changes in Menu js & scss - Added submenu options to the screen

--- a/src/components/MenuDropdown/MenuDropdown.module.scss
+++ b/src/components/MenuDropdown/MenuDropdown.module.scss
@@ -1,2 +1,9 @@
 .dropdown {
+  background-color: grey;
+  padding: 0;
+  .dropdownMenuItems {
+    list-style: none;
+    background-color: red;
+    padding: 0.5rem;
+  }
 }
