--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,37 +4,33 @@
   padding: 0 2rem;
   display: flex;
   justify-content: space-between;
-}
+  margin-top: 2rem;
 
-.titleContainer {
-  width: 10rem;
-  height: 3rem;
+  .titleContainer {
+    width: 10rem;
+    height: 3rem;
 
-  img {
-    width: 17rem;
-    height: 7rem;
+    img {
+      width: 17rem;
+      height: 7rem;
+    }
   }
-}
 
-h1,
-h4 {
-  margin: 0 auto;
-}
+  .menuContainer {
+    background-color: red;
+    width: 35rem;
+  }
 
-.menuContainer {
-  display: flex;
-  align-items: center;
-}
+  .loggedInMenu {
+    display: flex;
+    align-items: center;
+  }
 
-.loggedInMenu {
-  display: flex;
-  align-items: center;
-}
-
-.authButton {
-  color: #233d22;
-  font-weight: 600;
-  padding: 1rem 3rem;
-  border: none;
-  border-radius: 2rem;
+  .authButton {
+    color: #233d22;
+    font-weight: 600;
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 2rem;
+  }
 }
