--- a/src/components/MenuItems/MenuItems.module.scss
+++ b/src/components/MenuItems/MenuItems.module.scss
@@ -1,13 +1,16 @@
 .menuItems {
-  display: inline;
   list-style: none;
-  padding: 1rem;
+  padding: 0.7rem;
   background-color: green;
-  margin-right: 1rem;
+  max-height: 2.7rem;
+  min-width: 6rem;
+  text-align: center;
+  border: 1px solid black;
 
   a {
     text-decoration: none;
     color: black;
     font-weight: 600;
+    text-align: center;
   }
 }
