--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,8 +1,14 @@
 .menuDropdownContainer {
-  width: 20rem;
+  background-color: #84b5ff;
   .menu {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+    padding: 0;
+  }
+
+  .menuBars {
+    padding: 0.5rem;
+    border: none;
   }
 }
