--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,5 @@
+// @import "./css/fonts.scss";
+
 .app {
   height: 100vh;
 
@@ -13,7 +15,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
   }
 }
