--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,73 +3,28 @@
   height: 8rem;
   padding: 0 2rem;
   display: flex;
-  justify-content: space-between;
-}
+  margin-top: 2rem;
 
-.titleContainer {
-  width: 10rem;
-  height: 3rem;
+  .titleContainer {
+    width: 10rem;
+    height: 3rem;
 
-  img {
-    width: 17rem;
-    height: 7rem;
+    img {
+      width: 30rem;
+      height: 12rem;
+    }
   }
-}
 
-h1,
-h4 {
-  margin: 0 auto;
-}
+  .loggedInMenu {
+    display: flex;
+    align-items: center;
+  }
 
-.menuContainer {
-  display: flex;
-  align-items: center;
-}
-
-.loggedInMenu {
-  display: flex;
-  align-items: center;
-}
-
-ul {
-  list-style: none;
-}
-
-ul li {
-  display: inline;
-  padding: 0.9rem 2rem;
-  margin: 0 0.4rem;
-  background-color: green;
-  border-radius: 2rem;
-  color: #ebd516;
-  font-weight: 600;
-}
-
-a {
-  text-decoration: none;
-  color: #ebd516;
-  font-weight: 600;
-}
-
-.dropdownMenu {
-  position: absolute;
-  right: 16.8rem;
-  top: 5.5rem;
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  background-color: red;
-  gap: 1rem;
-}
-
-ul li ul li {
-  border-radius: 0rem;
-}
-
-.authButton {
-  color: #233d22;
-  font-weight: 600;
-  padding: 1rem 3rem;
-  border: none;
-  border-radius: 2rem;
+  .authButton {
+    color: #233d22;
+    font-weight: 600;
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 2rem;
+  }
 }
