- Created footer component - Added footer to App component - Added social media pngs to project - Added pokeapi image

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -17,4 +17,9 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .footerContainer {
+    position: absolute;
+    width: 100%;
+  }
 }
