--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,8 @@
 }
 
 body {
-  background-color: rgb(216, 188, 188);
+  background-image: url("./assets/images/backgroundPage.jpg");
+  background-size: cover;
   margin: 0;
   font-family: "Nunito";
   -webkit-font-smoothing: antialiased;
