--- a/src/components/AddPokemon/AddPokemon.module.scss
+++ b/src/components/AddPokemon/AddPokemon.module.scss
@@ -1,3 +1,5 @@
+@import "../../css/colors.scss";
+
 .addPokemonForm {
   margin: 0 auto;
   width: 50rem;
@@ -21,7 +23,7 @@
       appearance: unset;
       background-color: transparent;
       border: none;
-      border-bottom: 2px groove black;
+      border-bottom: 2px groove $border-dark;
       padding-bottom: 0.2rem;
     }
 
@@ -47,7 +49,7 @@
       appearance: unset;
       background-color: transparent;
       border: none;
-      border-bottom: 2px groove black;
+      border-bottom: 2px groove $border-dark;
       padding: 0 0.5rem 0.3rem;
     }
 
@@ -93,6 +95,6 @@
   margin: 0 auto;
   margin-top: 2rem;
   border-radius: 1rem;
-  background-color: white;
+  background-color: $main-background-color-dark;
   text-align: center;
 }
