--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,10 +1,9 @@
+@import "../../css/colors.scss";
+
 .button {
-  background-color: transparent;
-  border: solid 2px black;
+  background-color: $background-color-transparent;
+  border: solid 2px $border-dark;
   width: 7rem;
   height: 2rem;
   margin: 0 auto;
-}
-.button:hover {
-  background-color: #9dbd7f;
 }
