--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,11 +3,10 @@
   height: 15rem;
   padding: 0 2rem;
   display: flex;
+  flex-direction: column;
 
   .titleContainer {
-    width: 10rem;
-    height: 3rem;
-
+    align-self: center;
     img {
       width: 30rem;
       height: 12rem;
