--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -1,7 +1,7 @@
 @import "../../css/colors.scss";
 
 .menuDropdownContainer {
-  background-color: $background-color-menu;
+  background-color: $background-color-transparent;
   .menu {
     display: flex;
     flex-direction: column;
