TECHDEBT: Reorganized Collapsible menu into a single folder

--- a/src/components/CollapsibleMenu/MenuDropdown/MenuDropdown.module.scss
+++ b/src/components/CollapsibleMenu/MenuDropdown/MenuDropdown.module.scss
@@ -1,4 +1,4 @@
-@import "../../css/colors.scss";
+@import "../../../assets/css/colors.scss";
 
 .dropdown {
   background-color: $main-font-color-light;
