--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,4 @@
-@import "../../css/colors.scss";
+@import "../../assets/css/colors.scss";
 
 .button {
   background-color: $background-color-transparent;
