--- a/src/components/CollapsibleMenu/Menu/Menu.module.scss
+++ b/src/components/CollapsibleMenu/Menu/Menu.module.scss
@@ -1,4 +1,4 @@
-@import "../../css/colors.scss";
+@import "../../../assets/css/colors.scss";
 
 .menuDropdownContainer {
   background-color: $background-color-transparent;
